--- a/src/main/resources/templates/workerPane.html
+++ b/src/main/resources/templates/workerPane.html
@@ -205,128 +205,55 @@
 	<div class="checkout">
 		<div class="container">
 			<div class="row">
+				<div>
+					<div class="col-lg-4 offset-xl-2 contact_col">
+						<div class="contact_info">
+							<div class="button order_button" style="margin-top: 1px;"><a th:href="@{/product/add}">Dodaj produkt</a></div>
+							<div class="button order_button" style="margin-top: 1px;"><a th:href="@{/adress/edit}">Dodaj przedmiot</a></div>
+							<div class="button order_button" style="margin-top: 1px;"><a th:href="@{/adress/edit}">Dodaj producenta</a></div>
+							<div class="button order_button" style="margin-top: 1px;"><a th:href="@{/adress/edit}">Przedmioty</a></div>
+							<div class="button order_button" style="margin-top: 1px;"><a th:href="@{/adress/edit}">Zamówienia</a></div>
+						</div>
+					</div>
+				</div>
 
-				<!-- Billing Info -->
 
-				<div class="col-lg-6" th:if="${adress.id == null}">
-					<div class="billing checkout_section">
-						<div class="section_title">Adres</div>
-						<div class="section_subtitle">Podaj swoj adres</div>
-						<div class="checkout_form_container">
-							<form action="#" th:action="@{/adress}" th:object="${adress}" method="post" id="checkout_form" class="checkout_form">
-								<div>
-									<label for="city">Miasto</label>
-									<input th:field="*{city}" type="text" id="city" class="checkout_input">
-								</div>
-								<div>
-									<label for="street">Ulica</label>
-									<input th:field="*{street}" type="text" id="street" class="checkout_input">
-								</div>
-								<div>
-									<label for="postCode">Kod Pocztowy</label>
-									<input th:field="*{postCode}" type="text" id="postCode" class="checkout_input">
-								</div>
-								<div>
-									<label for="country">Kraj</label>
-									<input th:field="*{country}" type="text" id="country" class="checkout_input">
+				<div class="col-lg-4 offset-xl-2 contact_col">
+					<div class="get_in_touch">
+						<div class="section_title">Dane Produktu:</div>
+						<div class="contact_form_container">
+							<form action="#" id="contact_form" class="contact_form">
+								<div class="row">
+									<label for="name" style="font-size: 19px;">Nazwa</label>
+									<input style="background-color: #9f9f9f" type="text" id="name" class="contact_input" required="required">
+
+									<label for="desc" style="font-size: 19px;">Opis</label>
+									<textarea style="background-color: #9f9f9f" id="desc" rows = "5" cols = "50" name = "description" required="required">Opis produktu</textarea>
+
+									<label for="category" style="font-size: 19px;">ID Kategoria</label>
+								    <input th:each="category:${categories}" style="background-color: #9f9f9f;height: 10px;" type="radio" id="category" name="category" th:value="${category.id}" class="contact_input" required="required"><p th:text="${category.type}"></p>
+
+									<label for="producer" style="font-size: 19px;">ID Producent</label>
+                                    <input style="background-color: #9f9f9f" type="number" id="producer" class="contact_input" required="required">
+                                        <!--									<input  style="background-color: #9f9f9f" type="text" id="desc" class="contact_input" required="required">-->
+<!--							<ul>-->
+<!--								<li>Nazwa: <span ></span></li>-->
+<!--								<li>Opis: <span></span></li>-->
+<!--								<li>Kategoria: <span></span></li>-->
+<!--								<li>Producent: <span></span></li>-->
+<!--							</ul>-->
 								</div>
 							</form>
 						</div>
-					</div>
-					<button class="button contact_button" type="submit" form="checkout_form" value="Submit"><span>Dodaj adres</span></button>
-				</div>
-
-				<div th:if="${adress.id!=null}">
-					<div class="col-lg-4 offset-xl-2 contact_col">
-						<div class="contact_info">
-							<div class="contact_info_section">
-								<div class="contact_info_title" style="font-size:40px">Dane adresowe:</div>
-								<ul>
-									<li>Miasto: <span th:text="${adress.city}"></span></li>
-									<li>Ulica: <span th:text="${adress.street}"></span></li>
-									<li>Kod pocztowy: <span th:text="${adress.postCode}"></span></li>
-									<li>Kraj: <span th:text="${adress.country}"></span></li>
-								</ul>
-							</div>
-							<div class="button order_button"><a th:href="@{/adress/edit}">Zmien moje dane</a></div>
-						</div>
+						<div class="button order_button"><a th:href="@{/user/edit}">Dodaj produkt</a></div>
 					</div>
 				</div>
 
-				<br/>
-				<div class="col-lg-4 offset-xl-2 contact_col">
-					<div class="contact_info">
-						<div class="contact_info_section">
-							<div class="contact_info_title" style="font-size:40px">Twoje dane:</div>
-							<ul>
-								<li>Imie: <span th:text="${user.firstName}"></span></li>
-								<li>Naziwsko: <span th:text="${user.lastName}"></span></li>
-								<li>Email: <span th:text="${user.email}"></span></li>
-								<li>Login: <span th:text="${user.login}"></span></li>
-							</ul>
-						</div>
-						<div class="button order_button"><a th:href="@{/user/edit}">Zmien moje dane</a></div>
-					</div>
-				</div>
-				<div class = "col-12 p-0"  sec:authorize="hasRole('ROLE_USER')">
-					<div class = "jumbotron min-vh-100 text-center d-flex flex-column">
-						<table class="table table-hover table-striped sortable" id="orders">
-							<thead class="thead-dark">
-							<tr>
-								<th scope="col" th:text="'Id'"></th>
-<!--								<th scope="col" th:text="'Ilość przedmiotów zamówienia'"></th>-->
-								<th scope="col" th:text="'Data zamówienia'"></th>
-								<th scope="col" th:text="'Status'"></th>
-								<th scope="col" th:text="'Do zaplaty'"></th>
-								<th scope="col" th:text="'test'"></th>
-							</tr>
-							</thead>
-							<tbody>
-							<th:block th:each="order : ${orders}">
-								<tr th:id="${order.id}" style="font-size:20px;">
-									<td th:text="${order.id}" style="text-align: center;"></td>
-<!--									<td th:text="${order.}" style="text-align: center;"></td>-->
-									<td th:text="${order.orderDate}"></td>
-									<td th:text="${order.orderStatus}"></td>
-									<td th:text="${order.price}+'zl'"></td>
-									<td><div class="button order_button" style="width:70%;height:70%; margin:auto"><a th:href="@{/order/{id}(id=${order.id})}">Szczegoly</a></div></td>
-								</tr>
-							</th:block>
-							</tbody>
-						</table>
-						<!--<div class="button order_button"><a th:href="@{/user/edit}">Zmien</a></div>-->
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
 
-	<!-- Footer -->
 
-	<div class="footer_overlay"></div>
-	<footer class="footer">
-		<div class="footer_background" th:style="'background:url('+ @{/images/footer.jpg} +');'"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
-						<div class="footer_logo"><a href="#">Sublime.</a></div>
-						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-						<div class="footer_social ml-lg-auto">
-							<ul>
-								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
 </div>
 
 <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
