--- a/src/main/resources/templates/workerPane.html
+++ b/src/main/resources/templates/workerPane.html
@@ -320,7 +320,7 @@
 <!--					<div class = "col-12 p-0">-->
 <!--						<div class = "jumbotron min-vh-100 text-center d-flex flex-column">-->
 							<h1 th:if="${items.size()==0}">Brak przedmiotow w bazie danych</h1>
-							<table class="table table-hover table-striped sortable" id="items" th:if="${items.size()>0}">
+							<table class="table table-hover table-striped sortable" id="items" th:if="${items.size()>0}" style="display: none;" >
 								<thead class="thead-dark">
 								<tr>
 									<th scope="col" th:text="'Id'"></th>
@@ -352,6 +352,37 @@
 							<!--<div class="button order_button"><a th:href="@{/user/edit}">Zmien</a></div>-->
 <!--						</div>-->
 <!--					</div>-->
+
+
+					<h1 th:if="${orders.size()==0}">Brak zamowien w bazie danych</h1>
+					<table class="table table-hover table-striped sortable" id="orders" th:if="${orders.size()>0}" >
+						<thead class="thead-dark">
+						<tr>
+							<th scope="col" th:text="'Id'"></th>
+							<th scope="col" th:text="'Cena'"></th>
+							<th scope="col" th:text="'Data zamowienia'"></th>
+							<th scope="col" th:text="'Status'"></th>
+							<th scope="col" th:text="'Uzytkownik'"></th>
+							<th scope="col" th:text="'Przedmioty'"></th>
+							<th scope="col" th:text="'Edycja'"></th>
+						</tr>
+						</thead>
+						<tbody>
+						<th:block th:each="order : ${orders}">
+							<tr th:id="${order.id}" style="font-size:20px;">
+								<td th:text="${order.id}" style="text-align: center;" id="id_order" ></td>
+								<td th:text="${order.price}" style="text-align: center;"></td>
+								<td th:text="${order.orderDate}" style="text-align: center;"></td>
+								<td th:text="${order.orderStatus}"></td>
+								<td th:text="${order.user.login}"></td>
+								<td> <span th:each="c : ${order.orderItems.toArray()}" th:text="${c.getItem().product.name}" style="display: list-item;"></span></td>
+								<td><select style="background-color: #9f9f9f;width: auto;" name="checkout_city" th:id="${order.id}+'id'" class="dropdown_item_select checkout_input" require="required" th:onchange="'javascript:changeStatus(' + ${order.id} + ');'">
+									<option th:each="status: ${orderStatuses}"  th:selected="${order.orderStatus}==${status.getStatus()}" th:value="${status.getStatus()}" th:text="${status.getStatus()}"></option>
+								</select></td>
+							</tr>
+						</th:block>
+						</tbody>
+					</table>
 
 				</div>
 
