--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -207,7 +207,7 @@
 
 				<!-- Get in touch -->
 				<div class="col-lg-8 contact_col">
-					<div class="get_in_touch">
+					<div class="get_in_touch" sec:authorize="isAnonymous()">
 						<div class="section_title">Zaloguj się</div>
 						<div class="section_subtitle">Podaj swoje dane</div>
 						<div class="contact_form_container">
@@ -221,7 +221,7 @@
 									<div class="col-xl-6 last_name_col">
 										<!-- Last Name -->
 										<label for="password">Haslo</label>
-										<input name="password" style="background-color: #4e555b" type="text" id="password" class="contact_input" required="required">
+										<input name="password" style="background-color: #4e555b" type="password" id="password" class="contact_input" required="required">
 									</div>
 								</div>
 <!--								<button class="button contact_button"><span>Zaloguj</span></button>-->
@@ -239,6 +239,7 @@
 
 					</div>
 				</div>
+				<h1 sec:authorize="!isAnonymous()">Jestes juz zalogowany</h1>
 			</div>
 		</div>
 	</div>
