--- a/src/main/resources/templates/adminPane.html
+++ b/src/main/resources/templates/adminPane.html
@@ -309,7 +309,8 @@
                         <div class="contact_form_container">
                             <form action="#" th:action="@{/producer/add}" method="post" th:object="${producer}" id="producer_form" class="contact_form">
                                 <div class="row">
-                                    <label for="producer_name" style="font-size: 19px;">Opis</label>
+                                    <p th:errors="*{name}"></p>
+                                    <label for="producer_name" style="font-size: 19px;">Nazwa</label>
                                     <input th:field="*{name}" style="background-color: #9f9f9f" type="text" id="producer_name" class="contact_input" required="required">
 
                                 </div>
@@ -401,6 +402,7 @@
                                     <label for="login" style="font-size: 19px;">Login</label>
                                     <input th:field="*{login}" style="background-color: #9f9f9f" type="text" id="login" class="contact_input" required="required">
 
+                                    <p th:errors="*{firstName}"></p>
                                     <label for="firstname" style="font-size: 19px;">Imie</label>
                                     <input th:field="*{firstName}" style="background-color: #9f9f9f" type="text" id="firstname" class="contact_input" required="required">
 
@@ -413,16 +415,18 @@
                                     <label for="email" style="font-size: 19px;">Email</label>
                                     <input th:field="*{email}" style="background-color: #9f9f9f" type="email" id="email" class="contact_input" required="required">
 
+                                    <p th:errors="*{adress.country}"></p>
                                     <label for="country" style="font-size: 19px;">Kraj</label>
                                     <input th:field="*{adress.country}" style="background-color: #9f9f9f" type="text" id="country" class="contact_input" required="required">
-
+                                    <p th:errors="*{adress.city}"></p>
                                     <label for="city" style="font-size: 19px;">Miasto</label>
                                     <input th:field="*{adress.city}" style="background-color: #9f9f9f" type="text" id="city" class="contact_input" required="required">
 
+                                    <p th:errors="*{adress.street}"></p>
                                     <label for="street" style="font-size: 19px;">Ulica</label>
                                     <input th:field="*{adress.street}" style="background-color: #9f9f9f" type="text" id="street" class="contact_input" required="required">
 
-
+                                    <p th:errors="*{adress.postCode}"></p>
                                     <label for="postcode" style="font-size: 19px;">Kod Pocztowy</label>
                                     <input th:field="*{adress.postCode}" style="background-color: #9f9f9f" type="text" id="postcode" class="contact_input" required="required">
 
@@ -435,9 +439,9 @@
                         <!--						<div class="button order_button"><a th:href="@{/user/edit}">Dodaj produkt</a></div>-->
                         <button class="button contact_button" type="submit" form="worker_form" value="Submit"><span>Dodaj Pracownika</span></button>
                     </div>
-                    <div class = "table-responsive" style="width: 800px">
+                    <div class = "table-responsive" style="width: 800px;display: none" id="users">
                     <h1 th:if="${users.size()==0}">Brak zamowien w bazie danych</h1>
-                    <table class="table table-hover table-striped sortable" id="users" th:if="${users.size()>0}">
+                    <table class="table table-hover table-striped sortable"  th:if="${users.size()>0}">
                         <thead class="thead-dark">
                         <tr>
                             <th scope="col" th:text="'Id'"></th>
@@ -474,6 +478,41 @@
                         </th:block>
                         </tbody>
                     </table>
+                    </div>
+
+                    <div class = "table-responsive" style="width: 800px;display: none" id="votes">
+                        <h1 th:if="${votes.size()==0}">Brak komentarzy w bazie danych</h1>
+                        <table class="table table-hover table-striped sortable" th:if="${votes.size()>0}">
+                            <thead class="thead-dark">
+                            <tr>
+                                <th scope="col" th:text="'Id'"></th>
+                                <th scope="col" th:text="'Login'"></th>
+                                <th scope="col" th:text="'Przedmiot'"></th>
+                                <th scope="col" th:text="'Ocena'"></th>
+                                <th scope="col" th:text="'Komentarz'"></th>
+                                <th scope="col" th:text="'Data'"></th>
+                                <th scope="col" th:text="'Edycja'"></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <th:block th:each="vote: ${votes}">
+                                <tr th:id="${vote.id}" style="font-size:20px;">
+                                    <td th:text="${vote.id}" style="text-align: center;" id="id_vote" ></td>
+                                    <td th:text="${vote.user.login}" style="text-align: center;"></td>
+                                    <td th:text="${vote.item.product.name}" style="text-align: center;"></td>
+                                    <td th:text="${vote.score}"></td>
+                                    <td th:text="${vote.comment}"></td>
+                                    <td th:text="${vote.date}"></td>
+                                    <td style="display: flex;"><div class="button order_button" style="width:100%;height:70%; margin:auto" th:onclick="'javascript:deleteVote(' + ${vote.id} + ');'"><a>Usuń</a></div>
+                                        <div class="button order_button" style="width:100%;height:70%; margin:auto"><a th:href="@{/admin/edit/{id}(id=${user.id})}">Edytuj</a></div></td>
+                                    <!--                                <td> <span th:each="c : ${order.orderItems.toArray()}" th:text="${c.getItem().product.name}" style="display: list-item;"></span></td>-->
+                                    <!--                                <td><select style="background-color: #9f9f9f;width: auto;" name="checkout_city" th:id="${order.id}+'id'" class="dropdown_item_select checkout_input" require="required" th:onchange="'javascript:changeStatus(' + ${order.id} + ');'">-->
+                                    <!--                                    <option th:each="status: ${orderStatuses}"  th:selected="${order.orderStatus}==${status.getStatus()}" th:value="${status.getStatus()}" th:text="${status.getStatus()}"></option>-->
+                                    <!--                                </select></td>-->
+                                </tr>
+                            </th:block>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
 
