Spring Validation fix

--- a/src/main/resources/templates/adminPane.html
+++ b/src/main/resources/templates/adminPane.html
@@ -219,7 +219,7 @@
                         </div>
                     </div>
                 </div>
-
+                <h1 th:if="${costam}">nananana</h1>
 
                 <div class="col-lg-4 offset-xl-2 contact_col">
                     <div class="get_in_touch" id="product_details" style="display: none">
